🩹 Fix: 수정: .footer_bar의 overflow 및 backgorund-color

--- a/styles/layouts/_section-footer.scss
+++ b/styles/layouts/_section-footer.scss
@@ -9,7 +9,8 @@
     position: relative;
     width: 100%;
     height: 200px;
-    background: $cyan-light;
+    overflow: hidden;
+    background-color: $cyan-light;
 
     p {
       position: absolute;
